Changes to readme

--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -1729,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 111,
    "id": "4eeb227e",
    "metadata": {},
    "outputs": [
@@ -1764,8 +1764,9 @@
     "# 3. Sorts the matches from highest to lowest\n",
     "sort_values = {'$sort': { 'count': -1 }}\n",
     "\n",
-    "# Print the number of documents in the result\n",
+    "# Put the pipeline together\n",
     "pipeline = [match_query, group_query, sort_values]\n",
+    "# Run the pipeline through the aggregate method, cast the results as a list, and save the results to a variable\n",
     "results = list(establishments.aggregate(pipeline))\n",
     "# Print the first 10 results\n",
     "pprint(results[0:10])"
