--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -30353,7 +30353,7 @@
     }
    ],
    "source": [
-    "# Check that the coordinates are now numbers - due to the purpose of\n",
+    "# Check that the coordinates are now numbers - (search for\"latitude and longitude\", and see that there is no '' beside the values to confirm that the value is now numbers)\n",
     "pprint(establishments.find_one())"
    ]
   },
@@ -30460,7 +30460,7 @@
     }
    ],
    "source": [
-    "# Check that the coordinates and rating value are now numbers\n",
+    "# Check that the rating value are now numbers - (search for\"Rating Values\", and see that there is no '' beside the values\" to confirm that the value is now numbers)\n",
     "pprint(establishments.find_one())"
    ]
   }
